--- a/index.html
+++ b/index.html
@@ -11,6 +11,67 @@
     <title>Boolzapp</title>
 </head>
 <body>
-    <script src="main.js"></script>
+    <main class="background">
+        <div class="top-bg"></div>
+        <div class="down-bg">
+            <div class="container">
+                <div class="app">
+                    <div class="col-4">
+                        <div class="user-info-col-4">
+                            <div class="left-info-user">
+                                <img src="imgs/avatar_2.jpg" alt="" class="avatar-chat">
+                                <span id="user-name">Dennis</span>
+                            </div>
+                            <div class="icon-chat">
+                                <i class="fa-solid fa-circle-notch"></i>
+                                <i class="fa-solid fa-message"></i>
+                                <i class="fa-solid fa-ellipsis-vertical"></i>
+                            </div>
+                        </div>
+                        <div class="user"></div>
+                        <div class="notifiche-desktop d-flex justify-content-start align-items-center gap-3 ps-3">
+                            <div class="bells-icon">
+                                <i class="fa-solid fa-bell-slash"></i>
+                            </div>
+                            <div class="d-flex flex-column">
+                                <span class="ricevi-notifiche">Ricevi notifiche di nuovi messaggi</span>
+                                <span id="attiva-notifiche">Attiva notifiche desktop</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <div class="user-info">
+                            <div class="user-info-chat">
+                                <img src="imgs/avatar_1.jpg" alt="" class="avatar-chat">
+                                <div class="avatar-info">
+                                    <span class="avatar-name">Peppe</span>
+                                    <span class="avatar-access">Ultimo accesso alle 10,45</span>
+                                </div>
+                            </div>
+                            <div class="icon-chat">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                                <i class="fa-solid fa-paperclip"></i>
+                                <i class="fa-solid fa-ellipsis-vertical"></i>
+                            </div>
+                        </div>
+                        <div class="chat"></div>
+                        <div class="input-txt"></div>
+                        <div class="cont-input">
+                            <div class="chat-bttn">
+                                <i class="fa-regular fa-face-smile"></i>
+                            </div>
+                            <div class="input">
+                                <input id="txt" type="text" placeholder="Scrivi un messaggio">
+                            </div>
+                            <div class="chat-bttn">
+                                <i class="fa-solid fa-microphone"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+<script src="main.js"></script>
 </body>
 </html>
