--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                                 <i class="fa-solid fa-ellipsis-vertical"></i>
                             </div>
                         </div>
-                        <div class="user"></div>
                         <div class="notifiche-desktop d-flex justify-content-start align-items-center gap-3 ps-3">
                             <div class="bells-icon">
                                 <i class="fa-solid fa-bell-slash"></i>
@@ -37,6 +36,12 @@
                                 <span class="ricevi-notifiche">Ricevi notifiche di nuovi messaggi</span>
                                 <span id="attiva-notifiche">Attiva notifiche desktop</span>
                             </div>
+                        </div>
+                        <div class="search-chat d-flex justify-content-center align-items-center">
+                            <button id="button-search-col-4">
+                                <i class="fa-solid fa-magnifying-glass opacity-50"></i>
+                            </button>
+                            <input type="text" class="input-search-chat" placeholder="Cerca o inizia una nuova chat">
                         </div>
                     </div>
                     <div class="col-8">
