css done, sett js, html da modificare con js stuff

--- a/index.html
+++ b/index.html
@@ -43,13 +43,31 @@
                             </button>
                             <input type="text" class="input-search-chat" placeholder="Cerca o inizia una nuova chat">
                         </div>
+                        <!-- CONTAINER CHAT -->
+                        <div class="chat-container">
+                            <div class="chat-list d-flex justify-content-lg-start align-items-center gap-3 px-2 py-2">
+                                <div class="avatar-chat">
+                                    <img src="imgs/avatar_4.jpg" alt="" class="avatar-chat">
+                                </div>
+                                <div class="info-avatar-chat d-flex flex-column">
+                                    <!-- NOME E ULTIMO MESSAGGIO -->
+                                    <span class="nome-avatar-chat">Peppe Fetish</span>
+                                    <span class="last-message">Ultimo messaggio inviato</span>
+                                </div>
+                                <div class="time-message">
+                                    <!-- ORARIO -->
+                                    <span class="time">12.00</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-8">
                         <div class="user-info">
                             <div class="user-info-chat">
                                 <img src="imgs/avatar_1.jpg" alt="" class="avatar-chat">
                                 <div class="avatar-info">
-                                    <span class="avatar-name">Peppe</span>
+                                    <!-- nome e ultimo accesso MITTENTE, POSIZIONE TOP COL-8 -->
+                                    <span class="avatar-name">Ciruzz o Malavitus</span>
                                     <span class="avatar-access">Ultimo accesso alle 10,45</span>
                                 </div>
                             </div>
@@ -59,7 +77,14 @@
                                 <i class="fa-solid fa-ellipsis-vertical"></i>
                             </div>
                         </div>
-                        <div class="chat"></div>
+                        <div class="chat">
+                            <div class="message-received">
+                                <span class="txt-message"></span>
+                            </div>
+                            <div class="message-send">
+                                <div class="text-message"></div>
+                            </div>
+                        </div>
                         <div class="input-txt"></div>
                         <div class="cont-input">
                             <div class="chat-bttn">
