problema chat dflex?

--- a/index.html
+++ b/index.html
@@ -78,14 +78,21 @@
                                 <i class="fa-solid fa-ellipsis-vertical"></i>
                             </div>
                         </div>
+
                         <!-- !!!!!! PROBLEMA DA RISOLVERE POSIZIONE DEI MESSAGGI -->
                         <!--  vorrei mettere chat in flex con just-cont-between ma le grandezze dei contenitori dei messaggi prendono il 100% dell altezza di chat-->
-                        <div class="chat position-relative">
-                            <div class="message-received col-6 position-absolute">
-                                <span class="text-message">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos dicta corporis doloremque quam necessitatibus quas voluptas alias optio magni</span>
+                        
+                        
+                        <div class="chat ">
+                            <!-- <div class="col-chat">
+                                <div class="message-received col-6 position-absolute">
+                                    <span class="text-message">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos dicta corporis doloremque quam necessitatibus quas voluptas alias optio magni</span>
+                                </div>
                             </div>
-                            <div class="message-send col-6 position-absolute">
-                                <span class="text-message">okok Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero veniam accusamus amet eveniet ab sapiente maxime? Totam magnam dolor soluta consequuntur, explicabo enim quae doloribus cum facilis maiores, illo minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita totam pariatur enim autem iure, quisquam aperiam aut placeat neque cum soluta saepe, excepturi, fuga quos doloribus provident nostrum exercitationem quo.</span>
+                            <div class="col-chat"></div>
+                                <div class="message-send col-6 position-absolute">
+                                    <span class="text-message">okok Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero veniam accusamus amet eveniet ab sapiente maxime? Totam magnam dolor soluta consequuntur, explicabo enim quae doloribus cum facilis maiores, illo minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita totam pariatur enim autem iure, quisquam aperiam aut placeat neque cum soluta saepe, excepturi, fuga quos doloribus provident nostrum exercitationem quo.</span>
+                                </div> -->
                             </div>
                         </div>
                         <div class="input-txt"></div>
