chat con wrapper

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </div>
                         <!-- CONTAINER CHAT -->
                         <div class="chat-container">
-                            <div class="chat-list d-flex justify-content-lg-start align-items-center gap-3 px-2 py-2">
+                            <div class="chat-list d-flex justify-content-lg-start gap-3 px-2 py-2">
                                 <div class="avatar-chat">
                                     <img src="imgs/avatar_4.jpg" alt="" class="avatar-chat">
                                 </div>
@@ -82,20 +82,23 @@
                         <!-- !!!!!! PROBLEMA DA RISOLVERE POSIZIONE DEI MESSAGGI -->
                         <!--  vorrei mettere chat in flex con just-cont-between ma le grandezze dei contenitori dei messaggi prendono il 100% dell altezza di chat-->
                         
-                        
-                        <div class="chat d-flex justify-content-between">
-                            <div class="col-chat">
-                                <div class="message-received col-6 position-absolute">
-                                    <span class="text-message">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos dicta corporis doloremque quam necessitatibus quas voluptas alias optio magni</span>
+                        <div class="chat py-2">
+                            <div class="chat-wrapper px-5">
+                                <div class="message-received col-6">
+                                    <div class="text-message">DSAasdfasdfsad</div>
                                 </div>
                             </div>
-                            <div class="col-chat"></div>
-                                <div class="message-send col-6 position-absolute">
-                                    <span class="text-message">okok Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero veniam accusamus amet eveniet ab sapiente maxime? Totam magnam dolor soluta consequuntur, explicabo enim quae doloribus cum facilis maiores, illo minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita totam pariatur enim autem iure, quisquam aperiam aut placeat neque cum soluta saepe, excepturi, fuga quos doloribus provident nostrum exercitationem quo.</span>
+                            <div class="chat-wrapper px-5">
+                                <div class="message-send col-6">
+                                    <div class="text-message">CSAASWEDFGSDFER</div>
+                                </div>
+                            </div>
+                            <div class="chat-wrapper px-5">
+                                <div class="message-received col-6">
+                                    <div class="text-message">DSAasdfasdfsad</div>
                                 </div>
                             </div>
                         </div>
-                        <div class="input-txt"></div>
                         <div class="cont-input">
                             <div class="chat-bttn">
                                 <i class="fa-regular fa-face-smile"></i>
