--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 <i class="fa-regular fa-face-smile"></i>
                             </div>
                             <div class="input">
-                                <input id="txt" type="text" placeholder="Scrivi un messaggio" v-model="newMessage" @KeyUp.enter="addMessage" v-for="(newMessage) in messaggioinviato.messages ">
+                                <input id="txt" type="text" placeholder="Scrivi un messaggio" v-model="newMessage" @KeyUp.enter="addMessage">
                             </div>
                             <div class="chat-bttn">
                                 <i class="fa-solid fa-microphone"></i>
